fix sun/moon position on small screen

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -281,6 +281,12 @@ a {
   top: 10;
   left: 450;
 }
+@media (max-width: $small-screen-break) {
+  #moon-large,
+  #sun-large {
+    left: 150;
+  }
+}
 .night #moon-large {
   animation: sunmoonrise $transition-time;
 }
